[build-system]
requires = ["setuptools>=65.3.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gppc"
requires-python = ">=3.10"
keywords = ["OSRS", "Grand Exchange"]
authors = [{ name = "moxxos", email = "moxxos@proton.me" }]
license = { text = "GNU AGPLv3" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["requests", "climage"]
dynamic = ["version", "description", "readme"]

[project.scripts]
gppc = "gppc:main"

[project.optional-dependencies]
dev = ["autopep8>=1.7.0", "flake8>=5.0.4", "pylint>=2.15.2"]

[tool.setuptools]
package-dir = { "" = "src" }
license-files = ["LICENSE.txt"]

[tool.setuptools.dynamic]
version = { attr = "gppc._version_.__version__" }
description = { file = "SHORT.txt" }
readme = { file = ["README.md", "CHANGELOG.md"] }
